force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_FirmOrderStatus__c.field-meta.xml
<CustomField>
    <fullName>SPO_FirmOrderStatus__c</fullName>
    <label>Firm Order status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Creation in progress</fullName>
                <default>true</default>
                <label>Creation in progress</label>
            </value>
            <value>
                <fullName>Production in progress</fullName>
            </value>
            <value>
                <fullName>Distribution in progress</fullName>
            </value>
            <value>
                <fullName>Received in store</fullName>
            </value>
            <value>
                <fullName>Cancelled by production</fullName>
            </value>
            <value>
                <fullName>Cancelled by store</fullName>
            </value>
            <value>
                <fullName>Sent to MyPR</fullName>
            </value>
            <value>
                <fullName>Product delivered to client</fullName>
            </value>
            <value>
                <fullName>Technical error order</fullName>
            </value>
            <value>
                <fullName>Cancelled - Migrated in Xstore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>