force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>SPO_OrderNumber__c</fullName>
    <displayFormat>SP{000000}</displayFormat>
    <label>Order Number (DEPRECATED)</label>
    <type>AutoNumber</type>
</CustomField>