force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_ReceivedInStoreDate__c.field-meta.xml
<CustomField>
    <fullName>SPO_ReceivedInStoreDate__c</fullName>
    <label>Received in store date</label>
    <type>Date</type>
</CustomField>