force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_RevisedDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>SPO_RevisedDeliveryDate__c</fullName>
    <label>Revised Delivery Date</label>
    <type>Date</type>
</CustomField>