force-app/main/default/objects/SPO_FirmOrder__c/fields/SPO_Substatus__c.field-meta.xml
<CustomField>
    <fullName>SPO_Substatus__c</fullName>
    <label>Order Line Item substatus</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SPO_FirmOrderStatus__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Codification</fullName>
            </value>
            <value>
                <fullName>Technical data</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>