force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Comment__c.field-meta.xml
<CustomField>
    <fullName>TECH_Comment__c</fullName>
    <description>Technical comment (if EAI/ETL problem)</description>
    <label>TECH Comment</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>