force-app/main/default/objects/SPO_FirmOrder__c/fields/Tech_DateStatusUpdated__c.field-meta.xml
<CustomField>
    <fullName>Tech_DateStatusUpdated__c</fullName>
    <label>Tech_DateStatusUpdated</label>
    <type>Date</type>
</CustomField>