force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Last_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>TECH_Last_Delivery_Date__c</fullName>
    <formula>IF(ISBLANK(SPO_ReceivedInStoreDate__c), Planned_Delivery_date__c, SPO_ReceivedInStoreDate__c)</formula>
    <label>TECH Last Delivery Date</label>
    <type>Date</type>
</CustomField>