force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Nb_FO_cancelled__c.field-meta.xml
<CustomField>
    <fullName>TECH_Nb_FO_cancelled__c</fullName>
    <formula>SPO_BriefName__r.TECH_Nb_FO_cancelled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Nb FO cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>