force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Parent_Application_Source__c.field-meta.xml
<CustomField>
    <fullName>TECH_Parent_Application_Source__c</fullName>
    <formula>CASE( SPO_BriefName__r.ApplicationSource__c,
&apos;PERSO&apos; , &apos;PERSO&apos;,
&apos;ECO&apos;, &apos;ECO&apos;,
&apos;SPO&apos;,&apos;SPO&apos;, &apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Parent Application Source</label>
    <type>Text</type>
</CustomField>