force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_ParentOrderType__c.field-meta.xml
<CustomField>
    <fullName>TECH_ParentOrderType__c</fullName>
    <description>To determine FirmOrder kind to detect which picture size syntaxt to use in Lighning Component like &quot;SPO_FirmOrderTile.cmp&quot; via imgHeigh parameter (MIY-476, MIY-481)</description>
    <formula>IF(LEFT(Name, 1) = &apos;P&apos;,&apos;Perso&apos;,
			IF(LEFT(Name, 1)=&apos;S&apos;,&apos;SPO&apos;,&apos;Unknown&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH_ParentOrderType</label>
    <type>Text</type>
</CustomField>