force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Picture_source__c.field-meta.xml
<CustomField>
    <fullName>TECH_Picture_source__c</fullName>
    <description>Detect image source to use suitable sizing parameter for picture (wid&amp;hei for Fluid, width&amp;heightf for Lv.com) , (MIY-476,MIY-481)</description>
    <formula>IF(CONTAINS(Product_Image_URL__c, &apos;louisvuitton.com&apos;) ,&apos;lv.com&apos;,
			IF(CONTAINS(Product_Image_URL__c, &apos;fluidretail.net&apos;),&apos;fluidretail.net&apos;,&apos;Unknown&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Picture source</label>
    <type>Text</type>
</CustomField>