force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Product_Exo_Workflow__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_Exo_Workflow__c</fullName>
    <formula>/*ProductCatalogue__r.ReportingCategory__r.Exotic_Workflow__c*/

ProductCatalogue__r.ReportingCategory__r.Exotic_Workflow__c &amp;&amp; ProductCatalogue__r.Exotic__c /*MIY-1746*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Product Exo Workflow</label>
    <type>Checkbox</type>
</CustomField>