force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Product_Hard_Workflow__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_Hard_Workflow__c</fullName>
    <formula>/*AND(ProductCatalogue__r.Category__r.Category_Hardsided__c == true,OR (ProductCatalogue__r.Workflow__c,SPO_BriefName__r.SPO_DisplayOrder__c))*/

/*MIY-1721*/
AND(ProductCatalogue__r.ReportingCategory__r.Category_Hardsided__c == true,
OR (ProductCatalogue__r.Workflow__c,SPO_BriefName__r.SPO_DisplayOrder__c),
NOT(ProductCatalogue__r.StockRequest__c == true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Product Hard Workflow</label>
    <type>Checkbox</type>
</CustomField>