force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Product_Img_2__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_Img_2__c</fullName>
    <label>TECH Product Img: 2</label>
    <type>Url</type>
</CustomField>