force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Product_Img_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_Img_Base_URL__c</fullName>
    <formula>IF(
NOT(ISBLANK(ProductCatalogue__c)),
IF(
AND(
NOT(ISBLANK(FluidRecipeId__c)),
ISNUMBER(FluidRecipeId__c),
LEN(FluidRecipeId__c) = 8
),
$Setup.ProductSettings__c.FluidPictureUrl__c &amp; FluidRecipeId__c &amp; &apos;/image/&apos;,
IF(
AND(
NOT(ISBLANK(FluidRecipeId__c)),
NOT(ISNUMBER(FluidRecipeId__c)),
UPPER(LEFT(FluidRecipeId__c, 1)) = &apos;T&apos;,
LEN(FluidRecipeId__c) = 8
),
&apos;https://lv-api.3kit.com/api/configurations/&apos; + FluidRecipeId__c + &apos;/image/&apos;,
&apos;&apos;
)
),
&apos;&apos;
)

/*
IF (AND(NOT(ISBLANK(ProductCatalogue__c)),NOT(ISBLANK(FluidRecipeId__c))),
$Setup.ProductSettings__c.FluidPictureUrl__c &amp; FluidRecipeId__c &amp; &quot;/image/&quot;,
&quot;&quot;
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Product Img Base URL</label>
    <type>Text</type>
</CustomField>