force-app/main/default/objects/SPO_FirmOrder__c/fields/TECH_Product_NoExport_Workflow__c.field-meta.xml
<CustomField>
    <fullName>TECH_Product_NoExport_Workflow__c</fullName>
    <formula>ISPICKVAL(ProductCatalogue__r.Workshop__c, &apos;NOEXPORT&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TECH Product NoExport Workflow</label>
    <type>Checkbox</type>
</CustomField>