force-app/main/default/objects/SPO_FirmOrder__c/fields/Threekit_Short_Id__c.field-meta.xml
<CustomField>
    <fullName>Threekit_Short_Id__c</fullName>
    <description>MIY-1901</description>
    <externalId>true</externalId>
    <label>Threekit Short Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>