force-app/main/default/objects/SPO_FirmOrder__c/fields/Time_Since_Last_Change__c.field-meta.xml
<CustomField>
    <fullName>Time_Since_Last_Change__c</fullName>
    <formula>TODAY() - DATEVALUE(LastModifiedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Change</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>