force-app/main/default/objects/SPO_FirmOrder__c/fields/Undefined_Material__c.field-meta.xml
<CustomField>
    <fullName>Undefined_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Undefined Material</label>
    <type>Checkbox</type>
</CustomField>