force-app/main/default/objects/SPO_FirmOrder__c/fields/UnitaryPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitaryPrice__c</fullName>
    <description>Get Retail price what ever the Order/FirmOrder type. Used by MIY-476&amp; MIY-481 (SPO_FirmOrderTile.cmp)</description>
    <formula>IF (SPO_BriefName__r.SPO_UnitRetailPriceQuotation__c &lt;&gt; 0,
SPO_BriefName__r.SPO_UnitRetailPriceQuotation__c,
UnitRetailPrice__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unitary Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>