force-app/main/default/objects/SPO_FirmOrder__c/fields/UnitRetailPrice__c.field-meta.xml
<CustomField>
    <fullName>UnitRetailPrice__c</fullName>
    <description>Unit retail price</description>
    <label>Unit Retail Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>