force-app/main/default/objects/SPO_FirmOrder__c/fields/ValidatedMaxDate__c.field-meta.xml
<CustomField>
    <fullName>ValidatedMaxDate__c</fullName>
    <description>For Now Yours app or ECO website, &apos;ETL Status&apos; field is set to &apos;V&apos; in creation. This status changed when this date is coming (Time-Dependant Workflow)</description>
    <formula>IF (
  NOT(ISBLANK(ProductCatalogue__c)),
  CreatedDate + ProductCatalogue__r.LeadTimeApproval__c,
  CreatedDate
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Validated Max Date</label>
    <type>DateTime</type>
</CustomField>