force-app/main/default/objects/SPO_FirmOrder__c/recordTypes/Firm_Order.recordType-meta.xml
<RecordType>
    <fullName>Firm_Order</fullName>
    <active>true</active>
    <label>Firm Order</label>
</RecordType>