force-app/main/default/objects/SPO_FirmOrder__c/recordTypes/SPO_FirmOrder.recordType-meta.xml
<RecordType>
    <fullName>SPO_FirmOrder</fullName>
    <active>true</active>
    <label>SPO_Firm Order</label>
</RecordType>