force-app/main/default/objects/SPO_FirmOrder__c/validationRules/Do_not_change_manufactoring_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_not_change_manufactoring_date</fullName>
    <active>true</active>
    <description>manufacturing date is not editable when order is sent to ERP. MIY-1806</description>
    <errorConditionFormula>AND(
NOT($User.BypassVR__c),
NOT($Profile.Name = &apos;LV_Interface_Datastage&apos;),
NOT(ISPICKVAL(SPO_FirmOrderStatus__c, &apos;Creation in progress&apos;)),
ISCHANGED(Planned_Manufacturing_Date__c)
)</errorConditionFormula>
    <errorDisplayField>Planned_Manufacturing_Date__c</errorDisplayField>
    <errorMessage>You can no longer change the &apos;Planned Manufactoring Date&apos; once the Order is sent to production!</errorMessage>
</ValidationRule>