force-app/main/default/objects/SPO_FirmOrder__c/validationRules/Do_Not_Change_SKU.validationRule-meta.xml
<ValidationRule>
    <fullName>Do_Not_Change_SKU</fullName>
    <active>true</active>
    <description>Prevent users from changing the related product if order has already been sent to JDE. This rule  applies for Perso and e-Co orders</description>
    <errorConditionFormula>AND( 
    NOT($User.BypassVR__c),
    ISPICKVAL(SPO_FirmOrderStatus__c, &apos;Production in progress&apos;),
    ISPICKVAL( SPO_TechETLStatus__c , &apos;Y&apos;),
    OR(
       ISPICKVAL(SPO_BriefName__r.ApplicationSource__c, &apos;PERSO&apos;), 
       ISPICKVAL(SPO_BriefName__r.ApplicationSource__c, &apos;ECO&apos;)
    ), 
    ISCHANGED(ProductCatalogue__c)
	  
)</errorConditionFormula>
    <errorMessage>The order has already been sent to JDE. You can no longer change the related product.</errorMessage>
</ValidationRule>