force-app/main/default/objects/SPO_FirmOrder__c/validationRules/VR_FirmOrder_LineNumber_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_FirmOrder_LineNumber_Required</fullName>
    <active>true</active>
    <description>At creation, the line number is required</description>
    <errorConditionFormula>AND (
  NOT( $User.BypassVR__c ),
  OR (
    AND (
      ISNEW(),
      ISBLANK(LineNumber__c)
    ),
    ISCHANGED(LineNumber__c)
  )
)</errorConditionFormula>
    <errorDisplayField>LineNumber__c</errorDisplayField>
    <errorMessage>Line Number is required</errorMessage>
</ValidationRule>