force-app/main/default/objects/SPO_FirmOrder__c/listViews/Exotic_New_Orders.listView-meta.xml
<ListView>
    <fullName>Exotic_New_Orders</fullName>
    <booleanFilter>1 AND 2 AND 3 AND 4 AND 5</booleanFilter>
    <columns>Creation_Status__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPO_FirmOrderStatus__c</columns>
    <columns>ProductSKU__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>ProductCatalogue__c</columns>
    <columns>Product_Exotic_Leather__c</columns>
    <columns>Undefined_Material__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Creation_Status__c</field>
        <operation>equals</operation>
        <value>New Order</value>
    </filters>
    <filters>
        <field>TECH_Product_Exo_Workflow__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPO_FirmOrder__c.Firm_Order</value>
    </filters>
    <filters>
        <field>SPO_FirmOrderStatus__c</field>
        <operation>equals</operation>
        <value>Creation in progress</value>
    </filters>
    <filters>
        <field>IsInferiorVmaxDate__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Exotic - New Orders</label>
</ListView>