force-app/main/default/objects/SPO_FirmOrder__c/listViews/Exotic_Technical_Data_to_Define.listView-meta.xml
<ListView>
    <fullName>Exotic_Technical_Data_to_Define</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>ProductSKU__c</columns>
    <columns>ProductCatalogue__c</columns>
    <columns>Product_Exotic_Leather__c</columns>
    <columns>Undefined_Material__c</columns>
    <columns>Init_Planned_Manufacturing_Date__c</columns>
    <columns>Planned_Manufacturing_Date__c</columns>
    <columns>PlannedDeliveryDate__c</columns>
    <columns>Planned_Manufacturing_Date_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Creation_Status__c</field>
        <operation>equals</operation>
        <value>Technical Data to Define</value>
    </filters>
    <filters>
        <field>TECH_Product_Exo_Workflow__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPO_FirmOrder__c.Firm_Order</value>
    </filters>
    <filters>
        <field>SPO_FirmOrderStatus__c</field>
        <operation>notEqual</operation>
        <value>Production in progress,Distribution in progress,Received in store,Cancelled by production,Cancelled by store,Sent to MyPR,Product delivered to client</value>
    </filters>
    <label>Exotic - Technical Data to Define</label>
</ListView>