force-app/main/default/objects/SPO_FirmOrder__c/listViews/Nomades_Production_in_progress.listView-meta.xml
<ListView>
    <fullName>Nomades_Production_in_progress</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 4 OR 5 OR 6 OR 7)</booleanFilter>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>ProductSKU__c</columns>
    <columns>ProductCatalogue__c</columns>
    <columns>SPO_FirmOrderStatus__c</columns>
    <columns>TECH_Comment__c</columns>
    <columns>Planned_Delivery_date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Threekit_Short_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPO_FirmOrderStatus__c</field>
        <operation>equals</operation>
        <value>Production in progress</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01756</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01757</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01758</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01759</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01760</value>
    </filters>
    <filters>
        <field>ProductSKU__c</field>
        <operation>equals</operation>
        <value>P01761</value>
    </filters>
    <label>Nomades - Production in progress</label>
</ListView>