force-app/main/default/objects/SPO_FirmOrder__c/listViews/Orders_in_ETL_Status.listView-meta.xml
<ListView>
    <fullName>Orders_in_ETL_Status</fullName>
    <columns>SPO_TechETLStatus__c</columns>
    <columns>NAME</columns>
    <columns>ProductSKU__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>SPO_FirmOrderStatus__c</columns>
    <columns>ProductCategory__c</columns>
    <columns>Creation_Status__c</columns>
    <columns>ProductCatalogue__c</columns>
    <columns>Product_Exotic_Leather__c</columns>
    <columns>Undefined_Material__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SPO_TechETLStatus__c</field>
        <operation>equals</operation>
        <value>A,Order ready to be sent to JDE and SAP FMS,J,LG_SO</value>
    </filters>
    <label>Orders in ETL Status</label>
</ListView>