force-app/main/default/objects/SPO_FirmOrder__c/listViews/Perso_order_validated_2.listView-meta.xml
<ListView>
    <fullName>Perso_order_validated_2</fullName>
    <columns>SPO_FirmOrderStatus__c</columns>
    <columns>Creation_Status__c</columns>
    <columns>SPO_TechETLStatus__c</columns>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ProductSKU__c</columns>
    <columns>Product_Name__c</columns>
    <columns>ProductWorkshop__c</columns>
    <columns>ProductWorkshopName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Planned_Manufacturing_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>TECH_Product_Hard_Workflow__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>SPO_FirmOrder__c.Firm_Order,SPO_FirmOrder__c.SPO_FirmOrder</value>
    </filters>
    <filters>
        <field>SPO_FirmOrderStatus__c</field>
        <operation>equals</operation>
        <value>Creation in progress</value>
    </filters>
    <filters>
        <field>Creation_Status__c</field>
        <operation>equals</operation>
        <value>Technical Data to Define</value>
    </filters>
    <filters>
        <field>TECH_Product_Hard_Workflow__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Hardsided - Technical data to define</label>
    <sharedTo>
        <group>Sebastien_and_Maria_view</group>
    </sharedTo>
</ListView>